100-admin-user.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-admin-user
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-admin-user
